--- a/client/package.json
+++ b/client/package.json
@@ -1,8 +1,4 @@
 {
-  "homepage": "http://SHADOWHACKEROG.github.io/WHatsap-CLone",
-  "devDependencies": {
-    "gh-pages": "^4.0.0"
-  },
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -15,13 +11,13 @@
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "devStart": "concurrently --kill-others \"nodemon server.js\" \"npm start\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
